feat: Implement campaign setup routes for backend (#13)
* feat: Implement campaign setup routes for backend

* Apply sqlx prepare

* Fix snowflake id (de)?serializing

* Better align backend implementation with OpenAPI

* Add WIP voting/counting routes and logic

* Address PR feedback

* Apply sqlx prepare
